# winres

./: AUTHORS  CMakeLists.txt  ChangeLog.md  README.md  cmakeGenerate.bat
cmake/: CompileOptions.cmake  ComponentInstall.cmake  Custom.cmake  RuntimeDependencies.cmake
deploy/: CMakeLists.txt
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/manual/: CMakeLists.txt  cmake-init.tex
source/: CMakeLists.txt  version.rc.in
source/winres/: CMakeLists.txt  main.cpp
